Antes de agregar el popup de pedido grabado

--- a/Pilares/Base.lproj/Main.storyboard
+++ b/Pilares/Base.lproj/Main.storyboard
@@ -63,11 +63,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.42714656719999999" green="0.15725561660000001" blue="0.73810546870000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yph-4o-qM0">
-                                <rect key="frame" x="45" y="367" width="323" height="1"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.42714656719999999" green="0.15725561660000001" blue="0.73810546870000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKq-GR-WpU">
                                 <rect key="frame" x="126" y="408" width="162" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -698,6 +693,7 @@
                     <connections>
                         <outlet property="btnSubmitOrder" destination="nwZ-Sa-FAy" id="yRa-ih-pXd"/>
                         <outlet property="lblTotal" destination="aYv-lc-pnO" id="bfw-p9-ZFu"/>
+                        <outlet property="orderTableView" destination="doy-n1-v2n" id="1r1-pm-QVh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PJL-jv-Efi" userLabel="First Responder" sceneMemberID="firstResponder"/>
