--- a/Pilares/Base.lproj/Main.storyboard
+++ b/Pilares/Base.lproj/Main.storyboard
@@ -420,7 +420,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Descripcion" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4DL-bj-0fG">
-                                            <rect key="frame" x="104" y="35" width="142.5" height="59.5"/>
+                                            <rect key="frame" x="104" y="35" width="136" height="59.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -432,18 +432,18 @@
                                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVU-2J-cGC">
-                                            <rect key="frame" x="261.5" y="42" width="48.5" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precio" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVU-2J-cGC">
+                                            <rect key="frame" x="250" y="42.5" width="60" height="19.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="y0n-OL-2Wz"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="y0n-OL-2Wz"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="cVU-2J-cGC" firstAttribute="leading" secondItem="4DL-bj-0fG" secondAttribute="trailing" constant="15" id="45C-hl-lHK"/>
+                                        <constraint firstItem="cVU-2J-cGC" firstAttribute="leading" secondItem="4DL-bj-0fG" secondAttribute="trailing" constant="10" id="45C-hl-lHK"/>
                                         <constraint firstAttribute="trailing" secondItem="33s-Bf-AR2" secondAttribute="trailing" constant="50" id="APB-DA-uPP"/>
                                         <constraint firstItem="4DL-bj-0fG" firstAttribute="leading" secondItem="FuX-Nm-XK2" secondAttribute="trailing" constant="14" id="Dt0-J4-ebr"/>
                                         <constraint firstItem="FuX-Nm-XK2" firstAttribute="leading" secondItem="gfj-hf-K1J" secondAttribute="leading" constant="8" id="GF1-QW-QXb"/>
@@ -690,14 +690,14 @@
                                                     <constraint firstAttribute="height" constant="1" id="ruA-51-Fnn"/>
                                                 </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="En algunos casos podria generar gastos adicionales" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKl-4z-W30">
-                                                <rect key="frame" x="32.5" y="536.5" width="349.5" height="17.5"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="En algunos casos podria generar gastos adicionales" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fKl-4z-W30">
+                                                <rect key="frame" x="2" y="536.5" width="410" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 23,00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jf-pU-ZGb">
-                                                <rect key="frame" x="0.0" y="620.5" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="621" width="414" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="ccP-cn-gcU"/>
                                                 </constraints>
@@ -749,9 +749,10 @@
                                             <constraint firstItem="tUF-lC-ioL" firstAttribute="centerX" secondItem="sUx-gY-lyn" secondAttribute="centerX" id="YWg-LI-9KQ"/>
                                             <constraint firstAttribute="height" constant="850" id="ZGm-T3-hBW"/>
                                             <constraint firstItem="3jf-pU-ZGb" firstAttribute="leading" secondItem="sUx-gY-lyn" secondAttribute="leading" id="chc-RV-DcC"/>
+                                            <constraint firstItem="fKl-4z-W30" firstAttribute="leading" secondItem="sUx-gY-lyn" secondAttribute="leading" constant="2" id="hJH-SI-NT5"/>
                                             <constraint firstItem="n2i-0m-tgx" firstAttribute="top" secondItem="tUF-lC-ioL" secondAttribute="bottom" constant="23" id="hSQ-6u-7pZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="fKl-4z-W30" secondAttribute="trailing" constant="2" id="iP6-U3-XfG"/>
                                             <constraint firstAttribute="trailing" secondItem="qwr-Cc-F6I" secondAttribute="trailing" constant="20" id="iwY-82-1kp"/>
-                                            <constraint firstItem="fKl-4z-W30" firstAttribute="centerX" secondItem="sUx-gY-lyn" secondAttribute="centerX" id="rUJ-UV-Ax2"/>
                                             <constraint firstAttribute="trailing" secondItem="sZb-Sf-mHs" secondAttribute="trailing" constant="10" id="rco-hF-s6C"/>
                                             <constraint firstAttribute="bottom" secondItem="aAf-YS-rdz" secondAttribute="bottom" constant="50" id="rlY-ne-TSt"/>
                                             <constraint firstItem="qwr-Cc-F6I" firstAttribute="top" secondItem="tUF-lC-ioL" secondAttribute="bottom" constant="31" id="wP3-26-50W"/>
